fix(firefox): one-line wrap

--- a/firefox/chrome/includes/cascade-responsive.css
+++ b/firefox/chrome/includes/cascade-responsive.css
@@ -1,7 +1,8 @@
 @media (min-width: 800px) {
 
 
-  #navigator-toolbox { display: flex; flex-wrap: wrap; }
+  #navigator-toolbox { display: flex; flex-wrap: wrap; flex-direction: row; }
+
 
 
   #nav-bar {
